viewport update to solve a bug on smartphone renderisation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <meta name="description" content="the demo grid for hive scss">
     <meta name="author" content="Matteo Papadopoulos aka @spleenteo">
-
+	<meta name="viewport" content="width=device-width">
+	
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="hive.css">
     <link rel="stylesheet" href="demo_files/demo.css">
