a better demo file. English grammar to be corrected

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
 
 <head>
-    <title>HIVE SCSS demo grid</title>
+    <title>HIVE SCSS demo grid spleenteo/hive @ GitHub</title>
+    
     <meta charset="UTF-8">
     <meta name="description" content="the demo grid for hive scss">
     <meta name="author" content="Matteo Papadopoulos aka @spleenteo">
-	<meta name="viewport" content="width=device-width">
-	
+    <meta name="viewport" content="width=device-width">
+
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="hive.css">
     <link rel="stylesheet" href="demo_files/demo.css">
@@ -24,7 +25,11 @@
     <div class="cell_6">
         <article>
             <h2>What the hive is this?!</h2>
-            <p>We are in the "<strong>responsive</strong>" Era! So many devices that we cannot design for specific sizes or smartphone/tablets models. Bees are able to build a hive as a pattern based on their number and on the stage they are going to do it. A grid layout should be almost the same. So I wrote some media queries to broke the layout on four different sizes: <strong>smartphone portrait, landscape, tablets portrait, desktop and cinema display.</strong></p>            
+            <p>We are in the "<strong>responsive</strong>" Era! So many devices that we cannot design for specific sizes or smartphone/tablets models. Bees are able to build a hive as a pattern based on their number and on the stage they are going to do it. A grid layout should be almost the same. So I wrote some media queries to broke the layout on four different sizes: <strong>smartphone portrait, landscape, tablets portrait, desktop and cinema display.</strong></p>  
+            <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+              by running:
+              <pre>$ git clone git://github.com/spleenteo/hive</pre>
+            </p>          
         </article>
     </div>
     <div class="cell_3">
@@ -41,6 +46,11 @@
     <div class="cell_3">
         <section class="downlaod">
             <h2>Link</h2>
+<a href="http://github.com/spleenteo/hive"><img style="position: absolute; top: 20px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/spleenteo/hive/zipball/master">
+    <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+    <a href="http://github.com/spleenteo/hive/tarball/master">
+      <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
             <ul>
                 <li><a href="https://github.com/spleenteo/hive">Hive on GitHub</a></li>
                 <li><a href="http://twitter.com/#!/spleenteo">Follow on twitter</a></li>
