added a new page to demonstrate how nested cells works

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
               by running:
               <pre>$ git clone git://github.com/spleenteo/hive</pre>
-            </p>          
+            </p>
+            
+            <a class="cell_12 jumper" href="nested.html">Have a look to the nested cells demo</a>
         </article>
     </div>
     <div class="cell_3">
@@ -192,11 +194,17 @@
     <div class="cell_1"><section>cell 1</section></div>
     <div class="cell_1"><section>cell 1</section></div>
     <div class="cell_1"><section>cell 1</section></div>
+
+    <a class="cell_16 jumper" href="nested.html">Have a look to the nested cells demo</a>
 </div>
+
+
+
 
 <div class="hive_12">
     <div class="cell_12">
-        credits: <a href="http://www.basictrading.biz" target="_blank">Matteo Papadopoulos aka @spleenteo</a> - <a href="http://twitter.com/#!/spleenteo" target="_blank">follow</a> me on twitter - <a href="https://github.com/spleenteo/hive">Fork or download</a> this project on GitHub
+        <footer>credits: <a href="http://www.basictrading.biz" target="_blank">Matteo Papadopoulos aka @spleenteo</a> - <a href="http://twitter.com/#!/spleenteo" target="_blank">follow</a> me on twitter - <a href="https://github.com/spleenteo/hive">Fork or download</a> this project on GitHub
+</footer>
     </div>
 </div>
 
