added some example for tryptich

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <div class="cell_3">
         <section class="downlaod">
             <h2>Link</h2>
-<a href="http://github.com/spleenteo/hive"><img style="position: absolute; top: 20px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 <a href="http://github.com/spleenteo/hive/zipball/master">
     <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
     <a href="http://github.com/spleenteo/hive/tarball/master">
@@ -88,6 +87,18 @@
     <div class="cell_8"><section>cell 8</section></div>
     <div class="cell_4"><section>cell 4</section></div>
 
+    <div class="tryptich">
+        <section>This is a "triptyc" section to have three columns with cell_4 from landscape smartphones to biiger</section>
+        <div class="cell_4">
+            <section>1/3 cell_4</section>
+        </div>
+        <div class="cell_4">
+            <section>1/3 cell_4</section>
+        </div>
+        <div class="cell_4">
+            <section>1/3 cell_4</section>
+        </div>
+    </div>
     <div class="cell_7"><section>cell 7</section></div>
     <div class="cell_5"><section>cell 5</section></div>
     
@@ -207,5 +218,8 @@
 </footer>
     </div>
 </div>
+
+<a href="http://github.com/spleenteo/hive"><img style="position: absolute; top: 20px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
 
 </body>
