little update to the demo files

--- a/nested.html
+++ b/nested.html
@@ -27,13 +27,11 @@
             <h2>Cells and nested cells experiment</h2>
             <p>Just some test to understand how hive respond to nested cells. What's happen when children are displayed on mobiles or in a media query break up?</p>
             <a class="cell_12 jumper" href="index.html">Back to the main demo page</a>
-            
         </article>
     </div>
-    <div class="cell_3 pre_3">
+    <div class="cell_6">
         <section class="downlaod">
-            <h2>Link</h2>
-<a href="http://github.com/spleenteo/hive"><img style="position: absolute; top: 20px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+            <h2>Download</h2>
 <a href="http://github.com/spleenteo/hive/zipball/master">
     <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
     <a href="http://github.com/spleenteo/hive/tarball/master">
@@ -123,7 +121,7 @@
                 
             </section>
         </div>
-        <div class="cell_12">
+        <div class="tryptich">
             <footer class="clearfix">
                 <div class="cell_4">
                     footer menu
@@ -163,5 +161,6 @@
 </footer>
     </div>
 </div>
+<a href="http://github.com/spleenteo/hive"><img style="position: absolute; top: 20px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
 </body>
