nuovo inzioi sviluppo su base cento

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="hive.css">
+    <link rel="stylesheet" href="css/hive.css">
     <link rel="stylesheet" href="demo_files/demo.css">
 </head>
 
