the new library almost ready

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="cell_20"><section>cell_20</section></div>
         <div class="cell_20"><section>cell_20</section></div>
         <div class="cell_20"><section>cell_20</section></div>
-        <div class="cell_20"><section>cell_20</section></div>
+        <div class="cell_20 hived"><section>cell_20</section></div>
 
         <div class="cell_25"><section>cell_25</section></div>
         <div class="cell_25"><section>cell_25</section></div>
@@ -149,7 +149,7 @@
         <div class="cell_10"><section>cell_10</section></div>
         <div class="cell_40"><section>cell_40</section></div>
         <div class="cell_20"><section>cell_20</section></div>
-        <div class="cell_10"><section>cell_20</section></div>
+        <div class="cell_10 hived"><section>cell_20</section></div>
 
         <h2>Nested cells, do they work?</h2>
         <div class="cell_100">
