--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="stylesheets/hive.css">
+    <link rel="stylesheet" href="hive.css">
     <link rel="stylesheet" href="stylesheets/demo.css">
 </head>
 
