moved the demo file inside a specific folder

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="hive.css">
-    <link rel="stylesheet" href="stylesheets/demo.css">
+    <link rel="stylesheet" href="../hive.css">
+    <link rel="stylesheet" href="demo.css">
 </head>
 
 <body>
